[package]
name = "common-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "*"
moka = { version = "*", features = ["future"] }
redis = { version = "*", features = ["tokio-comp", "json", "cluster"] }
sea-orm = { version = "*", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
tracing = "*"
tracing-subscriber = "*"
tracing-rolling-file = { version = "*", features = ["non-blocking"] }
tracing-appender = "*"
urlencoding = "*"
reqwest = "*"

