[package]
name = "common-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
moka = { version = "0.12.15", features = ["future"] }
bb8 = "0.9.1"
redis = { version = "1.2.0", features = ["tokio-comp", "json", "cluster", "bb8"] }
sea-orm = { version = "2.0.0-rc.32", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-rolling-file = { version = "0.1.3", features = ["non-blocking"] }
tracing-appender = "0.2.5"
urlencoding = "2.1.3"
reqwest = { version = "0.13.2", features = ["stream"] }
aliyun-oss-rust-sdk = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
percent-encoding = "2.3.2"
base64 = "0.22.1"
rand = "0.10.1"
validator = { version = "0.20.0", features = ["derive"] }
